# dependabot-poetry-demo

./: pyproject.toml
