[tool.poetry]
name = "dependabot-poetry-demo"
version = "0.1.0"
description = ""
authors = ["Maxim Koltsov <kolmax94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.0.2"
requests = {version = "^2.26.0", optional = true }
Werkzeug = "^2.0.0"
boto3 = "^1.20.0"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
