[tool.poetry]
name = "dependabot-poetry-demo"
version = "0.1.0"
description = ""
authors = ["Maxim Koltsov <kolmax94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.1.2"
Werkzeug = "^2.0.0"
boto3 = "^1.20.0"
oneq = { version = "^2.0.2", source = "biocad-gitlab" }
docxtpl = "^0.14.1"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "biocad-gitlab"
url = "https://gitlab.math.bio/api/v4/groups/biocad/-/packages/pypi/simple"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
